split css by feature

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import { getPortafolioTextContent } from "../utils/i18n";
 import LanguageSwitcher from "../components/LanguageSwitcher.astro";
-import "../styles/portafolio.css";
+import "../styles/main.css";
 
 export interface Props {
 	title?: string;
