--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -99,7 +99,7 @@ const ogImage = `${siteUrl}${text.seo.ogImage}`;
 		</footer>
 		
 		<script>
-			import { initializePortfolioEffects } from "../scripts/portfolioEffects";
+			import { initializePortfolioEffects } from "../scripts/effects";
 			document.addEventListener("DOMContentLoaded", initializePortfolioEffects);
 		</script>
 	</body>
