fixed base url path

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -50,4 +50,4 @@ const text = getPortafolioTextContent(lang).projects;
 	</div>
 	</section>
 
-<script type="module" src="/scripts/projectFlip.js" defer></script>
+<script type="module" src="/portfolio/scripts/projectFlip.js" defer></script>
