--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,7 +53,7 @@ const ogImage = `${siteUrl}${text.seo.ogImage}`;
 		<meta property="twitter:image" content={ogImage} />
 		
 		<!-- Favicon -->
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/portfolio/favicon.svg" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		
 		<!-- Canonical URL -->
@@ -89,10 +89,10 @@ const ogImage = `${siteUrl}${text.seo.ogImage}`;
 			<div class="social-links">
 				<a href="mailto:juanjose.perez88@email.com" class="social-link"><span>📧</span></a>
 				<a href="https://linkedin.com/in/juanjoseperez88" class="social-link">
-					<img src="/icons-linkedIn.png" alt="LinkedIn Profile" width="24" height="24" />
+					<img src="/portfolio/icons-linkedIn.png" alt="LinkedIn Profile" width="24" height="24" />
 				</a>
 				<a href="https://github.com/juanp88" class="social-link">
-					<img src="/icons-github.png" alt="GitHub Profile" width="24" height="24" />
+					<img src="/portfolio/icons-github.png" alt="GitHub Profile" width="24" height="24" />
 				</a>
 			</div>
 			<p>{text.footer.copyright}</p>
